--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,6 +44,6 @@
   "plugins": ["@nrwl/nx"],
   "root": true,
   "settings": {
-    "import/internal-regex": "^@(trxn)/"
+    "import/internal-regex": "^@(traxion)/"
   }
 }
