--- a/apps/api/.eslintrc.json
+++ b/apps/api/.eslintrc.json
@@ -4,7 +4,14 @@
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
-      "rules": {}
+      "rules": {
+        "import/no-unresolved": [
+          "error",
+          {
+            "ignore": ["^@(traxion)/"]
+          }
+        ]
+      }
     },
     {
       "files": ["*.ts", "*.tsx"],
