--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,10 @@ services:
   # Database
   #------------------------------------------------
   database:
+    container_name: traxion-baas-database
     image: postgres:13-alpine
+    networks:
+      - traxion-baas-database-network
     ports:
       - '${POSTGRES_PORT:-5432}:5432'
     volumes:
@@ -16,20 +19,25 @@ services:
       - POSTGRES_DB=${POSTGRES_DB}
 
   #------------------------------------------------
-  # File storage
+  # Api
   #------------------------------------------------
-  minio:
-    image: minio/minio
-    command: server /data --console-address ":9001"
+  api:
+    container_name: traxion-baas-api
+    build:
+      context: .
+      dockerfile: ./Dockerfile
+    networks:
+      - traxion-baas-database-network
     ports:
-      - '${FILE_STORAGE_PORT:-9000}:9000'
-      - 9001:9001
+      - '3000:3000'
     environment:
-      - MINIO_ROOT_USER=${FILE_STORAGE_ACCESS_KEY}
-      - MINIO_ROOT_PASSWORD=${FILE_STORAGE_SECRET_KEY}
-    volumes:
-      - s3-data:/data
+      - POSTGRES_HOST=database
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
 
 volumes:
   database-data:
-  s3-data:
+
+networks:
+  traxion-baas-database-network:
